<resources>
    <string name="app_name">CasaLomaHospitalapp</string>
    <string name="log_in">LOG IN</string>
    <string name="doctor">Doctor</string>
    <string name="nurse">Nurse</string>
    <string name="enter">Enter</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="department">Department</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password1">Password</string>
    <string name="patient">Patient</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="last_name1">Last Name</string>
    <string name="first_name1">First Name</string>
    <string name="submit">Submit</string>
    <string name="mri">MRI</string>
    <string name="bph">BPH</string>
    <string name="bpl">BPL</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="heart_beat">Heart Beat</string>
    <string name="test_id">Test Id</string>
    <string name="list_of_tests">List Of Tests</string>
    <string name="enter1">Enter</string>
    <string name="patient_hospital_information">Patient Hospital Information</string>
    <string name="patient_registeration">Patient Registeration</string>
    <string name="first_name2">First Name</string>
    <string name="last_name2">Last Name</string>
    <string name="patient_id">Patient Id</string>
    <string name="room_number">Room Number</string>
    <string name="department1">Department</string>
    <string name="enter2">Enter</string>
    <string name="confirm_password1">Confirm Password</string>
    <string name="enter3">Enter</string>
    <string name="password3">Password</string>
    <string name="user_name1">user_name</string>
    <string name="department2">Department</string>
    <string name="last_name3">Last Name</string>
    <string name="first_name3">First Name</string>
    <string name="casa_loma_hospital_app">Casa Loma Hospital App</string>
    <string name="patient_informatio">Patient Informatio</string>
    <string name="information">Information</string>
    <string name="ok">OK</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">Lastname</string>
    <string name="first_name4">First Name</string>
    <string name="last_name4">Last Name</string>
    <string name="department4">Department</string>
    <string name="username4">Username</string>
    <string name="password4">Password</string>
    <string name="enter4">Enter</string>
    <string name="registration">Registration</string>
    <string name="confirm_password4">Confirm Password</string>
    <string name="confirm_password5">Confirm Password</string>
    <string name="registration2">Registration</string>
    <string name="enter5">Enter</string>
    <string name="password5">Password</string>
    <string name="username5">Username</string>
    <string name="department5">Department</string>
    <string name="nurse_id2">Nurse Id</string>
    <string name="last_name5">Last Name</string>
    <string name="first_name5">First Name</string>
    <string name="search1">Search</string>
    <string name="search2">Search</string>
    <string name="go_to_the_first_page">Go To The First Page</string>
</resources>
