<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.nazanin.casalomahospitalapp.CasaLomaHospitalapp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/casalomahospital"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:id="@+id/rdgDoctorNurse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginBottom="12dp">

        <RadioButton
            android:id="@+id/rdbDoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/doctor"
            android:textColor="#efef0a"
            android:textColorLink="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            tools:text="Doctor" />

        <RadioButton
            android:id="@+id/rdbNurse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nurse"
            android:textColor="#efef0a"
            android:textColorLink="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            tools:text="Nurse" />
    </RadioGroup>


    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/casa_loma_hospital_app"
        android:textColor="#e24b3d"
        android:textSize="29sp"
        android:textStyle="bold|italic"
        tools:ignore="UnusedAttribute"
        tools:text="Casa Loma Hospital App"
        android:layout_alignTop="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignTop="@+id/rdgDoctorNurse"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/enter"
        android:textColor="#0f0f0f"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        tools:text="Enter" />

</RelativeLayout>




